[package]
name = "milena"
version = "0.1.0"
authors = ["me@eskaton.ch <me@eskaton.ch>"]
edition = "2021"

[dependencies]
rdkafka = { version = "0.24.0", features = ["gssapi"] }
clap = { version= "3.2.16", features = ["cargo"] }
serde_json = "1.0.61"
dotproperties = "0.1.0"
serde = { version = "1.0.118", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
num-integer = "0.1.44"
futures = "0.3.9"
regex = "1.6.0"
