[package]
name = "milena"
version = "0.1.0"
authors = ["me@eskaton.ch <me@eskaton.ch>"]
edition = "2021"

[dependencies]
rdkafka = { version = "0.38.0", features = ["gssapi"] }
clap = { version= "3.2.16", features = ["cargo"] }
clap_complete = "3.2.3"
serde_json = "1.0.128"
dotproperties = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
num-integer = "0.1.46"
futures = "0.3.31"
regex = "1.11.1"
colorize = "0"
lazy_static = "1.5.0"
libc = "0.2.158"
byteorder = "1.5.0"

[profile.release]
opt-level = 'z'
lto = true